--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,13 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.carlosrafaelgn.fplay"
     android:installLocation="auto"
-    android:versionCode="1"
-    android:versionName="0.64" >
+    android:versionCode="4"
+    android:versionName="0.72" >
 
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="18" />
 
+    <!-- http://developer.android.com/guide/topics/manifest/supports-screens-element.html -->
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
+    
     <!-- For http playback -->
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- For android.media.audiofx.Visualizer -->
