--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.carlosrafaelgn.fplay"
     android:installLocation="auto"
-    android:versionCode="5"
-    android:versionName="0.73" >
+    android:versionCode="6"
+    android:versionName="0.74" >
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -17,6 +17,8 @@
         android:smallScreens="true"
         android:xlargeScreens="true" />
     
+    <!-- For Google Drive -->
+    <!-- uses-permission android:name="android.permission.GET_ACCOUNTS" -->
     <!-- For http playback -->
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- For android.media.audiofx.Visualizer -->
