--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,6 +32,10 @@
     <!-- For exporting files/settings -->
     <!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> -->
 
+    <!-- Just to make Google Play show the App even to phones without Bluetooth,
+    despite the uses-permission below! -->
+    <uses-feature android:name="android.hardware.bluetooth" android:required="false" />
+
     <application
         android:allowBackup="true"
         android:allowClearUserData="true"
