Updated the translations, created a microphone icon and removed the reverb effect

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.carlosrafaelgn.fplay"
     android:installLocation="auto"
-    android:versionCode="27"
-    android:versionName="0.95" >
+    android:versionCode="28"
+    android:versionName="0.96" >
 
     <!-- versionCode must be kept in sync with UI.VERSION_CODE -->
 
@@ -34,7 +34,7 @@
     <!-- For exporting files/settings -->
     <!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> -->
     <!-- For android.media.audiofx.PresetReverb -->
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <!-- <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" /> -->
     
 
 
