Implemented the first version of a fecther for the Icecast directory, adapting other classes as necessary to accommodate the changes

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,8 @@
     <!-- uses-permission android:name="android.permission.GET_ACCOUNTS" -->
     <!-- For http playback -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- To check the connection state -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- For android.media.audiofx.Visualizer -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
