--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:smallScreens="true"
         android:xlargeScreens="true" />
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="false" />
+
     <!-- For Google Drive -->
     <!-- uses-permission android:name="android.permission.GET_ACCOUNTS" -->
     <!-- For http playback -->
@@ -41,7 +45,7 @@
 
     <!--
     Just to make Google Play show the App even to phones without Bluetooth,
-    despite the uses-permission below!
+    despite the uses-permission below!
     -->
     <uses-feature
         android:name="android.hardware.bluetooth"
