Added a few optimizations to the ProGuard configuration

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ android {
 	buildTypes {
 		release {
 			runProguard true
-			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
+			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-project.txt'
 		}
 	}
 
