--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,6 +35,8 @@
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
     <!-- http://developer.android.com/reference/android/Manifest.permission.html#READ_EXTERNAL_STORAGE -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- Apparently, a few devices require this.... -->
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <!-- For exporting files/settings -->
     <!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> -->
     <!-- For android.media.audiofx.PresetReverb -->
