--- a/build.gradle
+++ b/build.gradle
@@ -1,57 +1,67 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.+'
-    }
-}
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
-dependencies {
-	compile fileTree(dir: 'libs', include: '*.jar')
+buildscript {
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath 'com.android.tools.build:gradle:1.2.3'
+
+		// NOTE: Do not place your application dependencies here; they belong
+		// in the individual module build.gradle files
+	}
+}
+
+allprojects {
+	repositories {
+		mavenCentral()
+	}
 }
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 22
     buildToolsVersion "20.0.0"
 
 	defaultConfig {
 		applicationId "br.com.carlosrafaelgn.fplay"
 		minSdkVersion 10
-		targetSdkVersion 21
+		targetSdkVersion 22
+	}
+
+	sourceSets {
+		main {
+			manifest.srcFile 'AndroidManifest.xml'
+			java.srcDirs = ['src']
+			resources.srcDirs = ['src']
+			aidl.srcDirs = ['src']
+			renderscript.srcDirs = ['src']
+			res.srcDirs = ['res']
+			assets.srcDirs = ['assets']
+		}
+
+		// Move the tests to tests/java, tests/res, etc...
+		instrumentTest.setRoot('tests')
+
+		// Move the build types to build-types/<type>
+		// For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
+		// This moves them out of them default location under src/<type>/... which would
+		// conflict with src/ being used by the main source set.
+		// Adding new build types or product flavors should be accompanied
+		// by a similar customization.
+		debug.setRoot('build-types/debug')
+		release.setRoot('build-types/release')
 	}
 
 	buildTypes {
 		release {
-			runProguard true
+			minifyEnabled true
 			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-project.txt'
 		}
 	}
+}
 
-    sourceSets {
-        main {
-            manifest.srcFile 'AndroidManifest.xml'
-            java.srcDirs = ['src']
-            resources.srcDirs = ['src']
-            aidl.srcDirs = ['src']
-            renderscript.srcDirs = ['src']
-            res.srcDirs = ['res']
-            assets.srcDirs = ['assets']
-        }
-
-        // Move the tests to tests/java, tests/res, etc...
-        instrumentTest.setRoot('tests')
-
-        // Move the build types to build-types/<type>
-        // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
-        // This moves them out of them default location under src/<type>/... which would
-        // conflict with src/ being used by the main source set.
-        // Adding new build types or product flavors should be accompanied
-        // by a similar customization.
-        debug.setRoot('build-types/debug')
-        release.setRoot('build-types/release')
-    }
+dependencies {
+	compile fileTree(dir: 'libs', include: '*.jar')
 }
 
 task copyNativeLibs(type: Copy) {
