--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.carlosrafaelgn.fplay"
     android:installLocation="auto"
-    android:versionCode="80"
-    android:versionName="1.45" >
+    android:versionCode="81"
+    android:versionName="1.46" >
 
     <!-- versionCode must be kept in sync with UI.VERSION_CODE -->
+    <!-- versionName must be kept in sync with UI.VERSION_NAME -->
 
     <uses-sdk
         android:minSdkVersion="10"
