--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -86,7 +86,7 @@
         android:description="@string/app_description"
         android:icon="@mipmap/ic_launcher"
         android:banner="@mipmap/ic_launcher"
-        android:label="FPlay"
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:fullBackupContent="@xml/backup_rules"
         android:theme="@style/AppTheme" >
@@ -94,7 +94,7 @@
             android:name="br.com.carlosrafaelgn.fplay.activity.ActivityHost"
             android:clearTaskOnLaunch="true"
             android:configChanges="orientation|screenSize|screenLayout|smallestScreenSize"
-            android:label="FPlay"
+            android:label="@string/app_name"
             android:launchMode="singleTask"
             android:multiprocess="false"
             android:screenOrientation="unspecified"
@@ -111,7 +111,7 @@
              -->
             <intent-filter
                 android:icon="@mipmap/ic_launcher"
-                android:label="FPlay"
+                android:label="@string/app_name"
                 android:priority="1">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -119,7 +119,7 @@
             </intent-filter>
             <intent-filter
                 android:icon="@mipmap/ic_launcher"
-                android:label="FPlay"
+                android:label="@string/app_name"
                 android:priority="1">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -127,7 +127,7 @@
             </intent-filter>
             <intent-filter
                 android:icon="@mipmap/ic_launcher"
-                android:label="FPlay"
+                android:label="@string/app_name"
                 android:priority="1">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -135,7 +135,7 @@
             </intent-filter>
             <intent-filter
                 android:icon="@mipmap/ic_launcher"
-                android:label="FPlay"
+                android:label="@string/app_name"
                 android:priority="1">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -145,7 +145,7 @@
             <!-- do not include hardcoded 3GP and MP4 extensions, as they are widely used for videos -->
             <intent-filter
                 android:icon="@mipmap/ic_launcher"
-                android:label="FPlay"
+                android:label="@string/app_name"
                 android:priority="1">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -172,7 +172,7 @@
             </intent-filter>
             <intent-filter
                 android:icon="@mipmap/ic_launcher"
-                android:label="FPlay"
+                android:label="@string/app_name"
                 android:priority="1">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -227,7 +227,7 @@
 
         <receiver
             android:name="br.com.carlosrafaelgn.fplay.WidgetMain"
-            android:label="FPlay" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
