Adding a new build flavor: FPlay X (adding support for 64 bits, and removed support for armeabi)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,9 +8,10 @@
     <!-- versionCode must be kept in sync with UI.VERSION_CODE -->
     <!-- versionName must be kept in sync with UI.VERSION_NAME -->
 
-    <uses-sdk
+    <!-- In favor of gradle -->
+	<!-- <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="23" />
+        android:targetSdkVersion="23" /> -->
 
     <!-- http://developer.android.com/guide/topics/manifest/supports-screens-element.html -->
     <supports-screens
