--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ android {
 			aidl.srcDirs = ['src', 'src-x']
 			renderscript.srcDirs = ['src', 'src-x']
 			res.srcDirs = ['res', 'res-x']
-			jniLibs.srcDirs = ['libs-x']
+			jniLibs.srcDirs = ['libs', 'libs-x']
 		}
 
 		// Move the tests to tests/java, tests/res, etc...
